fix cropping tool and account for no crop version

--- a/app/assets/stylesheets/builder/partials/images.scss
+++ b/app/assets/stylesheets/builder/partials/images.scss
@@ -50,6 +50,6 @@ section.images-container {
 
 section.cropper {
   img {
-    width: 200px;
+    // width: 200px;
   }
 }
